Pods/ping.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ping
spec:
  containers:
  - name: ping
    image: cgr.dev/chainguard/wolfi-base
    command:
    - sleep
    - "5000"
