Pods/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: www
spec:
  containers:
  - name: meinserver
    image: erkules/nginxhostname:v1
